force-app/main/default/objects/Opportunity/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>상담 대상 고객</description>
    <inlineHelpText>상담 대상이 될 고객을 선택하세요.</inlineHelpText>
    <label>고객</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>상담</relationshipLabel>
    <relationshipName>Consulting</relationshipName>
    <type>Lookup</type>
</CustomField>