force-app/main/default/objects/Opportunity/fields/New_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>New_Contact_Email__c</fullName>
    <description>첫 방문 고객 이메일</description>
    <label>첫 방문 고객 이메일</label>
    <type>Email</type>
</CustomField>