force-app/main/default/objects/Opportunity/fields/New_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>New_Contact_Phone__c</fullName>
    <description>첫 방문 고객 전화번호</description>
    <label>첫 방문 고객 연락처</label>
    <type>Phone</type>
</CustomField>