force-app/main/default/objects/Opportunity/fields/New_First_Name__c.field-meta.xml
<CustomField>
    <fullName>New_First_Name__c</fullName>
    <description>첫 방문 고객 이름</description>
    <label>첫 방문 고객 이름</label>
    <length>80</length>
    <type>Text</type>
</CustomField>