force-app/main/default/objects/Opportunity/fields/New_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Last_Name__c</fullName>
    <description>첫 방문 고객 성</description>
    <label>첫 방문 고객 성</label>
    <length>40</length>
    <type>Text</type>
</CustomField>