force-app/main/default/objects/Opportunity/recordTypes/First_Consulting.recordType-meta.xml
<RecordType>
    <fullName>First_Consulting</fullName>
    <active>true</active>
    <businessProcess>구매 상담 프로세스</businessProcess>
    <label>첫 방문</label>
</RecordType>