force-app/main/default/objects/Opportunity/recordTypes/Revisiting.recordType-meta.xml
<RecordType>
    <fullName>Revisiting</fullName>
    <active>true</active>
    <businessProcess>구매 상담 프로세스</businessProcess>
    <label>기존고객</label>
</RecordType>