force-app/main/default/objects/Opportunity/recordTypes/Simple_consulting.recordType-meta.xml
<RecordType>
    <fullName>Simple_consulting</fullName>
    <active>true</active>
    <businessProcess>단순 상담 프로세스</businessProcess>
    <label>단순 상담</label>
</RecordType>