force-app/main/default/objects/Opportunity/validationRules/only_cunsulting_stage.validationRule-meta.xml
<ValidationRule>
    <fullName>only_cunsulting_stage</fullName>
    <active>true</active>
    <description>구매 생성 전까지는 상담 단계만 선택 가능합니다</description>
    <errorConditionFormula>AND(
    OR(
        ISNEW(),
        ISCHANGED(RecordTypeId)
    ),
    OR(
        AND(
            RecordType.DeveloperName = &apos;Simple_consulting&apos;,
            NOT(ISPICKVAL(StageName, &apos;단순 상담&apos;))
        ),
        AND(
            OR(
                RecordType.DeveloperName = &apos;Revisiting&apos;,
                RecordType.DeveloperName = &apos;First_Consulting&apos;
            ),
            NOT(ISPICKVAL(StageName, &apos;상담&apos;))
        )
    )
)</errorConditionFormula>
    <errorMessage>&apos;주문생성 후 구매 단계로 자동 변경합니다  상담 단계를 선택 해 주세요&apos;</errorMessage>
</ValidationRule>